--- a/index.html
+++ b/index.html
@@ -18,8 +18,16 @@
             <input type="password" id="password" name="password" required>
             <span class="error" id="password-error"></span>
             <br><br>
-            <input type="checkbox" id="remember-me" name="remember-me">
-            <label for="remember-me">Remember me</label>
+            <div class="checkbox-group">
+                <div class="input-group">
+                    <input type="checkbox" id="show-password" name="show-password">
+                    <label for="show-password">Show Password</label>
+                </div>
+                <div class="input-group">
+                    <input type="checkbox" id="remember-me" name="remember-me">
+                    <label for="remember-me">Remember me</label>
+                </div>
+            </div>
             <br><br>
             <button type="submit">Login</button>
             <div id="loading-spinner" style="display: none;">
