--- a/index.html
+++ b/index.html
@@ -5,6 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login Page</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        /* Add this CSS code to styles.css or inline styles */
+        .checkbox-group {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+        }
+        .input-group {
+            display: flex;
+            align-items: center;
+        }
+        .input-group input[type="checkbox"] {
+            margin-right: 5px;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -20,12 +35,12 @@
             <br><br>
             <div class="checkbox-group">
                 <div class="input-group">
-                    <input type="checkbox" id="show-password" name="show-password">
                     <label for="show-password">Show Password</label>
+                    <input type="checkbox" id="show-password" name="show-password">
                 </div>
                 <div class="input-group">
-                    <input type="checkbox" id="remember-me" name="remember-me">
                     <label for="remember-me">Remember me</label>
+                    <input type="checkbox" id="remember-me" name="remember-me">
                 </div>
             </div>
             <br><br>
